# nokhwa

./: Cargo.toml
src/: camera.rs  init.rs  js_camera.rs  lib.rs  query.rs  threaded.rs
src/backends/capture/: avfoundation.rs  mod.rs  msmf_backend.rs  network_camera.rs  opencv_backend.rs
uiua-nokhwa-bindings-linux/: Cargo.toml
uiua-nokhwa-bindings-linux/src/: lib.rs
uiua-nokhwa-bindings-macos/: Cargo.toml
uiua-nokhwa-bindings-macos/src/: lib.rs
uiua-nokhwa-bindings-windows/: Cargo.toml
uiua-nokhwa-bindings-windows/src/: lib.rs
uiua-nokhwa-core/: Cargo.toml
