[package]
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
categories = ["api-bindings", "multimedia", "os", "web-programming"]
description = "A Simple-to-use, cross-platform Rust Webcam Capture Library"
edition = "2021"
keywords = ["camera", "webcam", "capture", "cross-platform"]
license = "Apache-2.0"
name = "uiua-nokhwa"
repository = "https://github.com/l1npengtul/nokhwa"
version = "0.10.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["examples/jscam"]
members = ["uiua-nokhwa-bindings-macos", "uiua-nokhwa-bindings-windows", "uiua-nokhwa-bindings-linux", "uiua-nokhwa-core"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
decoding = ["uiua-nokhwa-core/mjpeg"]
default = ["flume", "decoding"]
input-avfoundation = ["uiua-nokhwa-bindings-macos"]
input-msmf = ["uiua-nokhwa-bindings-windows"]
input-v4l = ["uiua-nokhwa-bindings-linux"]
serialize = ["serde", "uiua-nokhwa-core/serialize"]
# Disable arena buffer on v4l
# This should fix crash on Raspberry Pi that have faulty v4l driver.
# WARNING: This create a performance regression, half of the frames will be dropped
# You shouldn't enable this unless you have to.
input-native = ["input-avfoundation", "input-v4l", "input-msmf"]
input-v4l-no-arena-buffer = ["uiua-nokhwa-bindings-linux/no-arena-buffer"]
# Re-enable it once soundness has been proven + mozjpeg is updated to 0.9.x
# input-uvc = ["uvc", "uvc/vendor", "usb_enumeration", "lazy_static"]
input-jscam = ["web-sys", "js-sys", "wasm-bindgen-futures", "wasm-bindgen", "wasm-rs-async-executor"]
input-opencv = ["opencv", "opencv/videoio", "opencv/rgb", "rgb", "uiua-nokhwa-core/opencv-mat"]
output-wgpu = ["wgpu", "uiua-nokhwa-core/wgpu-types"]
#output-wasm = ["input-jscam"]
docs-features = []
docs-nolink = ["uiua-nokhwa-core/docs-features"]
docs-only = ["input-native", "input-opencv", "input-jscam", "output-wgpu", "output-threaded", "serialize"]
output-threaded = ["parking_lot"]
small-wasm = []
test-fail-warning = []

[dependencies]
paste = "1.0"
thiserror = "1.0"

[dependencies.uiua-nokhwa-core]
path = "uiua-nokhwa-core"
version = "0.1"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.flume]
optional = true
version = "0.10"

[dependencies.image]
default-features = false
version = "0.24"

[dependencies.v4l]
optional = true
version = "0.13"

[dependencies.usb_enumeration]
optional = true
version = "0.2"

[dependencies.wgpu]
optional = true
version = "0.16"

[dependencies.opencv]
default-features = false
optional = true
version = "0.81"

[dependencies.rgb]
optional = true
version = "0.8"

[dependencies.uiua-nokhwa-bindings-windows]
optional = true
path = "uiua-nokhwa-bindings-windows"
version = "0.4"

[dependencies.uiua-nokhwa-bindings-macos]
optional = true
path = "uiua-nokhwa-bindings-macos"
version = "0.2"

[dependencies.uiua-nokhwa-bindings-linux]
optional = true
path = "uiua-nokhwa-bindings-linux"
version = "0.1"

[dependencies.regex]
optional = true
version = "1.7"

[dependencies.parking_lot]
optional = true
version = "0.12"

[dependencies.web-sys]
features = [
  "console",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "ImageData",
  "MediaDevices",
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaStreamConstraints",
  "MediaTrackSupportedConstraints",
  "MediaStream",
  "MediaStreamTrack",
  "MediaTrackSettings",
  "MediaTrackConstraints",
  "MediaStreamTrackState",
  "MimeType",
  "MimeTypeArray",
  "Navigator",
  "Node",
  "Permissions",
  "PermissionDescriptor",
  "PermissionState",
  "PermissionStatus",
  "Plugin",
  "PluginArray",
  "Window",
]
optional = true
version = "0.3"

[dependencies.js-sys]
optional = true
version = "0.3"

[dependencies.wasm-bindgen]
optional = true
version = "0.2"

[dependencies.wasm-bindgen-futures]
optional = true
version = "0.4"

[dependencies.wasm-rs-async-executor]
optional = true
version = "0.9"

[package.metadata.docs.rs]
features = ["docs-only", "docs-nolink", "docs-features"]
