[package]
description = "The V4L2 bindings crate for `nokhwa`"
edition = "2021"
keywords = ["v4l", "v4l2", "linux", "capture", "webcam"]
license = "Apache-2.0"
name = "uiua-nokhwa-bindings-linux"
repository = "https://github.com/l1npengtul/nokhwa"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Disable arena buffer of v4l2 for the crate to work on raspberry pi with faulty v4l2 driver
# https://github.com/l1npengtul/nokhwa/pull/121
no-arena-buffer = []

[dependencies]

[dependencies.uiua-nokhwa-core]
path = "../uiua-nokhwa-core"
version = "0.1.0"

[target.'cfg(target_os="linux")'.dependencies]
v4l = "0.14"
v4l2-sys-mit = "0.3"
