[package]
authors = ["l1npengtul"]
description = "The AVFoundation bindings crate for `nokhwa`"
edition = "2021"
keywords = ["avfoundation", "macos", "capture", "webcam"]
license = "Apache-2.0"
name = "uiua-nokhwa-bindings-macos"
repository = "https://github.com/l1npengtul/nokhwa"
version = "0.2.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.uiua-nokhwa-core]
path = "../uiua-nokhwa-core"
version = "0.1.0"

[target.'cfg(any(target_os="macos",target_os="ios"))'.dependencies]
block = "0.1"
cocoa-foundation = "0.1"
core-foundation = "0.9.3"
core-media-sys = "0.1"
core-video-sys = "0.1"
flume = "0.10"
objc = {version = "0.2", features = ["exception"]}
once_cell = "1.16"
