[package]
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "Core type definitions for nokhwa"
edition = "2021"
keywords = ["camera", "webcam", "capture", "cross-platform"]
license = "Apache-2.0"
name = "uiua-nokhwa-core"
repository = "https://github.com/l1npengtul/nokhwa"
version = "0.1.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
docs-features = ["serialize", "wgpu-types", "mjpeg"]
mjpeg = ["mozjpeg"]
opencv-mat = ["opencv"]
serialize = ["serde"]
test-fail-warnings = []
wgpu-types = ["wgpu"]

[dependencies]
bytes = "1.3"
thiserror = "1.0"

[dependencies.image]
default-features = false
version = "0.25"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.wgpu]
optional = true
version = "0.16"

[dependencies.opencv]
default-features = false
optional = true
version = "0.81"

[dependencies.mozjpeg]
optional = true
version = "0.10"

[package.metadata.docs.rs]
features = ["docs-features"]
